docs: Comprehensive README update covering all new API surface
- Document AsyncRequestCoalescer with WebFlux/Reactor bridge examples
- Document CoalesceXMetrics SPI with ready-to-paste Micrometer and OTEL examples
- Document LoggingCoalesceXMetrics (LongAdder counters, logSummary, snapshot, reset)
- Update Key Design Decisions table: compute() vs computeIfAbsent() rationale,
  remove-before-complete ordering, LongAdder counter motivation
- Add API Overview section showing the full class hierarchy at a glance
- Add Java Version Notes table explaining Java 21-23 vs Java 24+ (JEP 491) behaviour
- Add CI pinning smoke test description with -Djdk.tracePinnedThreads=full usage
- Update performance table with wall-clock timing from SimulationHarness run
- Add CI badge

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>